--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.0.4",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
