--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.10.3",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
