--- a/package.json
+++ b/package.json
@@ -2,34 +2,19 @@
   "name": "webpack-guide",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "dist/webpack-numbers.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "dev": "webpack-dev-server --open",
-    "server": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/githubalin/webpack-guide.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.15"
+  "bugs": {
+    "url": "https://github.com/githubalin/webpack-guide/issues"
   },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.1",
-    "express": "^4.17.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.0.4",
-    "mini-css-extract-plugin": "^0.9.0",
-    "style-loader": "^1.1.3",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-visualizer-plugin": "^0.1.11"
-  }
+  "homepage": "https://github.com/githubalin/webpack-guide#readme"
 }
