--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-guide",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/webpack-numbers.js",
   "scripts": {
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/githubalin/webpack-guide/issues"
   },
-  "homepage": "https://github.com/githubalin/webpack-guide#readme"
+  "homepage": "https://github.com/githubalin/webpack-guide#readme",
+  "devDependencies": {
+    "lodash": "^4.17.15",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  }
 }
