--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "webpack-guide",
+  "name": "webpack-guide-use",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/webpack-numbers.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/githubalin/webpack-guide/issues"
   },
-  "homepage": "https://github.com/githubalin/webpack-guide#readme"
+  "homepage": "https://github.com/githubalin/webpack-guide#readme",
+  "devDependencies": {
+    "webpack-guide": "^1.1.0"
+  }
 }
