--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-guide",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "main": "dist/webpack-numbers.js",
   "scripts": {
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/githubalin/webpack-guide#readme",
   "devDependencies": {
-    "lodash": "^4.17.15",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
