--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "http-server dist"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +19,12 @@
     "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
+    "http-server": "^0.12.1",
     "style-loader": "^1.1.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "workbox-webpack-plugin": "^5.1.2"
   }
 }
